--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
     <title></title>
   </head>
   <body>
-  	<script src="index.js" type="text/javascript"></script>
+  	<script src="src.js" type="text/javascript"></script>
   </body>
 </html>
